--- a/LAB-08/21047_Lab08.ipynb
+++ b/LAB-08/21047_Lab08.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "## Lab-8\n",
     "\n",
-    "## V. SAI SHRUTHIK (BL.EN.U4AIE21135)"
+    "## G. ANVITH REDDY (BL.EN.U4AIE21047)"
    ]
   },
   {
