--- a/LAB-08/21047_Lab08.ipynb
+++ b/LAB-08/21047_Lab08.ipynb
@@ -107,10 +107,10 @@
     "import pyttsx3\n",
     "\n",
     "# Get a temporary directory where you have write permissions\n",
-    "custom_temp_dir = r\"C:\\Users\\natsu\\OneDrive\\Desktop\"\n",
+    "custom_temp_dir = r\"C:\\Users\\anvit\\OneDrive\\Desktop\"\n",
     "\n",
     "# Transcribe the audio file\n",
-    "audio_file = r\"C:\\Users\\natsu\\Downloads\\Bhanumathi_weds_Rajat.wav\"\n",
+    "audio_file = r\"C:\\Users\\anvit\\Downloads\\Bhanumathi_weds_Rajat.wav\"\n",
     "recognizer = sr.Recognizer()\n",
     "with sr.AudioFile(audio_file) as source:\n",
     "    audio_data = recognizer.record(source)\n",
@@ -162,7 +162,7 @@
     "from scipy.io import wavfile\n",
     "\n",
     "# Load the audio file\n",
-    "sampling_rate, audio_data = wavfile.read(r\"C:\\Users\\natsu\\OneDrive\\Desktop\\bharat_speech.wav\")\n",
+    "sampling_rate, audio_data = wavfile.read(r\"C:\\Users\\anvit\\OneDrive\\Desktop\\bharat_speech.wav\")\n",
     "\n",
     "# Display the audio\n",
     "ipd.display(ipd.Audio(data=audio_data, rate=sampling_rate))"
